--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Educating, Celebrating, Motivating, Networking, Promoting, Socializing.
         </div>
 
         <div class="box">
-          <img src="https://github.com/heyfeyevents/heyfeyevent.com/blob/main/images%20-%20Copy/barat%20jpg.jpg?raw=true" alt="" />
+          <img src="images - Copy/barat jpg.jpg" alt="" />
           <h3 class="title">barat events</h3>
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
