--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ Educating, Celebrating, Motivating, Networking, Promoting, Socializing.
         </div>
 
         <div class="box">
-          <h3>follow us</h3>
+          <h3>FOLLOW US</h3>
         <a href="https://www.instagram.com/heyfeyeventsbyalmoiz/">
           <i class="fab fa-instagram"></i> Instagram </a>
           <a href="https://www.linkedin.com/in/hey-fey-events-by-almoiz-412123296">
