--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    
    <div class="content">
 <h3>
-        <img src="images - Copy/fileEDownloadswebsiteimagesevent_logo_-removebg-preview.png.png">    
+        <img src="logo png het.jpg">    
         <h3> " your vision  our expertise " </h3> <br>
    
       
