--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    
    <div class="content">
 <h3>
-        <img src="e:\Downloads\logo_png_het-removebg-preview (1).png">    
+        <img src="logo_png_het-removebg-preview (1).png">    
         <h3> " your vision  our expertise " </h3> <br>
    
       
