--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    
    <div class="content">
 <h3>
-        <img src="3d hey 123.jpg">    
+        <img src="https://github.com/heyfeyevents/heyfeyevent.com/blob/main/3d%20hey%20123.jpg?raw=true">    
         <h3> " your vision  our expertise " </h3> <br>
    
       
